# aib2ofx

./: .gitignore  Dockerfile  LICENSE  Pipfile  README.md  README.rst  TODO.md  aib2ofx  pyproject.toml  requirements.txt  setup.py
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
.github/workflows/: docker-image.yml
GM/: README.md  README.rst  aib2ofx.user.js
aib2ofx/: aib.py  aib2ofx.py  cfg.py  cli.py  main.py  ofx.py
aib2ofx_lib/: aib.py  cfg.py  ofx.py  pdfparse.py
aib2wesabe/: aib.py  cfg.py
docker/: Dockerfile  Dockerfile.prod
