[tool.black]
skip-string-normalization = true

[tool.poetry]
name = 'aib2ofx'
version = '0.71'
description = 'Download data from aib.ie in OFX format'
authors = ['Jakub Turski <yacoob@gmail.com>']
license = 'MIT'
readme = 'README.md'
repository = 'https://github.com/yacoob/aib2ofx'

[tool.poetry.dependencies]
python = '^3.6'
mechanicalsoup = '^0.12'
python-dateutil = '^2.8.1'

[tool.poetry.dev-dependencies]
black = '^20.8b1'
ipython = '>=1'
pylint = '^2.6.0'
rope = "^0.18.0"

[tool.poetry.scripts]
aib2ofx = 'aib2ofx.cli:main'

[build-system]
requires = ['poetry-core>=1.0.0']
build-backend = 'poetry.core.masonry.api'
