[tool.black]
skip-string-normalization = true

[tool.poetry]
name = 'aib2ofx'
version = '0.73.2'
description = 'Download data from aib.ie in OFX format'
authors = ['Jakub Turski <yacoob@gmail.com>']
license = 'MIT'
readme = 'README.md'
repository = 'https://github.com/yacoob/aib2ofx'

[tool.poetry.dependencies]
python = '>=3.11'
mechanicalsoup = '^1.3'
python-dateutil = '^2.9.0'

[tool.poetry.dev-dependencies]
black = '^24.4.2'
ipython = '^8.24.0'
pylint = '^3.2.2'
rope = '^1.13.0'

[tool.poetry.scripts]
aib2ofx = 'aib2ofx.cli:main'

[build-system]
requires = ['poetry-core>=1.0.0']
build-backend = 'poetry.core.masonry.api'
