[tool.poetry]
name = 'aib2ofx'
version = '0.73.3'
description = 'Download data from aib.ie in OFX format'
authors = ['Jakub Turski <yacoob@gmail.com>']
license = 'MIT'
readme = 'README.md'
repository = 'https://github.com/yacoob/aib2ofx'

[tool.poetry.dependencies]
python = '>=3.11'
mechanicalsoup = '^1.3'
python-dateutil = '^2.9.0'

[tool.poetry.group.dev.dependencies]
ipython = '^8.26.0'
ipdb = "^0.13.13"

[tool.poetry.scripts]
aib2ofx = 'aib2ofx.cli:main'

[build-system]
requires = ['poetry-core']
build-backend = 'poetry.core.masonry.api'

[tool.ruff.format]
quote-style = 'single'

[tool.pyright]
venvPath = '.'
venv = ".venv"
